<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
            android:id="@+id/blocked"
            android:title="@string/blocked"
            android:icon="@drawable/ic_block_24dp"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/allowed"
            android:title="@string/allowed"
            android:icon="@drawable/ic_allowed_24dp"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/countries"
            android:title="@string/countries"
            android:icon="@drawable/ic_flag_24dp"
            app:showAsAction="ifRoom" />

</menu>