<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
                name="settings"
                type="com.call.blocker.settingsActivity.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainLayout"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            tools:context=".settingsActivity.SettingsActivity">

        <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="22sp"/>

        <TextView
                android:id="@+id/textViewEmailPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textViewName"
                android:layout_marginTop="15dp"/>

        <Button
                android:id="@+id/buttonDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/delete"
                style="@style/Widget.AppCompat.Button.Colored"
                app:layout_constraintTop_toBottomOf="@id/textViewEmailPhone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/buttonLogout"/>

        <Button
                android:id="@+id/buttonLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/logout"
                style="@style/Widget.AppCompat.Button.Colored"
                app:layout_constraintTop_toBottomOf="@id/textViewEmailPhone"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/buttonDelete"/>

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:paddingBottom="15dp"
                android:clipToPadding="false"
                android:scrollbars="none"
                app:layout_constraintTop_toBottomOf="@id/buttonDelete">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <Switch
                        android:id="@+id/switchReadContacts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/read_from_contact_preference"
                        android:checked="@={settings.readFromContacts}" />

                <Switch
                        android:id="@+id/switchAllowBlock"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/switchReadContacts"
                        android:layout_marginTop="25dp"
                        android:text="@{settings.filterString}"
                        android:checked="@={settings.filterStatusForSwitch}" />

                <TextView
                        android:id="@+id/textViewApplyTo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:layout_constraintTop_toBottomOf="@id/switchAllowBlock"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:text="@string/apply_to"/>

                <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/checkboxCall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@id/textViewApplyTo"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/checkboxSMS"
                        android:layout_marginRight="20dp"
                        android:checked="@={settings.applyToCall}"
                        android:text="@string/call"/>

                <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/checkboxSMS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@id/textViewApplyTo"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/checkboxCall"
                        android:layout_marginLeft="20dp"
                        android:checked="@={settings.applyToSMS}"
                        android:text="@string/sms"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>