<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:indeterminate="true"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingLeft="15dp">

        <TextView
                android:id="@+id/textViewAddNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_number"
                android:paddingTop="12dp"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textViewAddNumber"
                android:layout_marginTop="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/buttonAddNumber"
                android:layout_marginBottom="7dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPhoneNumber"
                    android:layout_width="match_parent"
                    android:inputType="phone"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/buttonAddNumber"
                app:layout_constraintTop_toBottomOf="@id/textInputNumber">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/editTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:imeOptions="actionGo"
                    android:hint="@string/description_optional"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
                android:id="@+id/buttonAddNumber"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/ic_add_circle_24dp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/textInputNumber"
                app:layout_constraintBottom_toBottomOf="@id/textInputDescription"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>